# NeuOnNet-iFly

./: CMakeLists.txt  LICENSE  README.md
ci/: build.arch.Dockerfile  build.ubuntu-18.Dockerfile  prereq.bat
cmake/: FindJsonCpp.cmake  FindTensorflow.cmake
depends/sdk/: CMakeLists.txt  LICENSE
depends/sdk/cmake/: FindFFMPEG.cmake  export.cmake  version.cmake
depends/sdk/res/: export_configuration.h.in.in  version.cpp.in
depends/sdk/src/: access_unit_adapter.cpp  curl.cpp  curl.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  external_tool.cpp  external_tool.h  extraction.cpp  extraction.h  frame_ptr.h  hash_fnv1a.cpp  http_error_code.h  interruption.cpp  interruption.h  options.cpp  options.h  resample.h  sighandler.h  singleton.h  source.cpp  source.h  track_adapter.cpp  track_adapter.h  transport_error.h  uuid.cpp
depends/sdk/test/: mock_curl.cpp  mock_curl.h  mock_functor.cpp  mocks.h  sb_splitter.cpp  ut_external_tool.cpp  ut_ntp.cpp
examples/: CMakeLists.txt
examples/depends/sdk/: CMakeLists.txt  LICENSE
examples/depends/sdk/ci/: build.arch.Dockerfile
examples/depends/sdk/cmake/: FindFFMPEG.cmake  export.cmake  version.cmake
examples/depends/sdk/res/: export_configuration.h.in.in
examples/depends/sdk/src/: access_unit_adapter.cpp  access_unit_adapter.h  curl.h  decoder.cpp  demuxer.cpp  demuxer.h  external_tool.cpp  extraction.cpp  extraction.h  hash_fnv1a.h  interruption.cpp  ntp.cpp  ntp.h  options.cpp  resample.h  response.h  singleton.h  source.cpp  track_adapter.cpp  track_adapter.h  transport_error.cpp  uuid.h
examples/depends/sdk/test/: mock_curl.h  mock_functor.h  sb_splitter.cpp  ut_curl.cpp  ut_external_tool.cpp  ut_hash_fnv1a.cpp  ut_ntp.cpp
examples/res/: arch.Dockerfile.in  centos-8.Dockerfile.in  ubuntu-18.Dockerfile.in
examples/src/: neuon_sample.cpp
headers/: CMakeLists.txt
headers/include/neuon/: neuon_c.h
res/: clip.sh  dataset.sh  demo.sh  download.sh  unsync.sh
sources/: CMakeLists.txt
sources/src/: composer.cpp  composer.h  configuration.h  demo.cpp  face_detection.h  license.h  log.h  model.cpp  model.h  neuon_c.cpp  neuon_cxx.cpp  neuon_cxx.h  neuon_data.cpp  neuon_detect.cpp  speech_detection.h  tensorflow_api.h  tensorflow_dynamic.cpp  tensorflow_dynamic.h  tensorflow_static.cpp  tensorflow_static.h
sources/src/details/: setup.py.in
sources/src/details/neuon/details/: dataset.py  preprocessing.py  primitives.py  statistic.py
sources/src/gym/: setup.py.in
sources/src/gym/neuon/gym/: export.py  import.py  train.py
sources/src/show/: setup.py.in
sources/src/show/neuon/show/: test.py  visualize.py
